# competitive-programming

./: prek.toml  pyproject.toml  template.py
